Refactor servlets for JSON responses and add logging
This commit overhauls servlet error handling and response mechanisms.
Servlets now return JSON responses with appropriate HTTP status codes
(e.g., 400, 401, 404) instead of forwarding requests or setting
request attributes. This makes the backend behave more like a RESTful API.

SLF4J logging has been integrated into all modified servlets for
improved debugging and monitoring.

Additionally, the `idUser` field in the `User` bean is now annotated
with `@JsonIgnore` to prevent its serialization in JSON outputs.